# stonelytics-studio

./: Launch Studio.bat  pyproject.toml
stonelytics/: conductor.py  services.py  shell.py
stonelytics/templates/: studio.html
